# pcb-test-code-ws-22-23

./: .gitignore  .gitmodules  CMakeLists.txt  adxl345.c  adxl345.h  bus_scan.c  hardware_test.c  hello.c  hello_adc.c  main.h  pac193x.c  pac193x.h  readme.md  sht31.c
Inc/: hardware_setup.h
app/: hardware_test.c  i2c_bus_scan.c  test_adxl345.c  test_all_sensors.c  test_data_adc_10_times.c  test_data_adc_batch_reading.c  test_dummy_data.c  test_echo.c  test_hello.c  test_led.c  test_pac193x.c  test_sht31.c  test_upload_microphone_data.c
app_speech_recognize/: CMakeLists.txt  audio_provider.cpp  main.cpp  readme.md  utility_macro.h
pre-build test files/: i2c_bus_scan.uf2  readme.md  test_adc_mic.uf2  test_adc_vol.uf2  test_adxl345.uf2  test_all_sensors.uf2  test_led.uf2  test_pac193x.uf2  test_sht31.uf2
scripts/: readme.md  serial_receive.py
sensor_lib/: CMakeLists.txt  adxl345.h  pac193x.c  pac193x.h  sht31.h
setup/: hardware_setup.c  hardware_setup.h
